# finwatch-cli

./: .gitignore  main.py  pyproject.toml
finwatch/: config.py  models.py  ui.py
finwatch/commands/: market.py
finwatch/services/: stock_service.py
