[project]
name = "finwatch-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "tenacity>=9.1.4",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
